ResolvedType no longer implements TypeName to avoid bugs in lookup Auto add contract interfaces is now default